Server-side updates to fix twilio.

--- a/src/server/ts/package.json
+++ b/src/server/ts/package.json
@@ -11,9 +11,11 @@
     "@aws-sdk/client-bedrock-runtime": "^3.785.0",
     "@aws-sdk/credential-providers": "^3.782.0",
     "@smithy/node-http-handler": "^4.0.4",
+    "alawmulaw": "^6.0.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "body-parser": "^2.2.0",
+    "dotenv": "^16.5.0",
     "expres": "^0.0.5",
     "express": "^5.1.0",
     "express-ws": "^5.0.2",
